syntax = "proto3";

option csharp_namespace = "MonitorAgent";

package monitor;

service ProcessService {
  // Get list of the dotnet process from the host machine
  rpc GetProcessList (ProcessListRequest) returns (ProcessListResponse);
  // Get details of the requested dotnet process
  rpc GetProcessDetails (ProcessDetailsRequest) returns (ProcessDetailsResponse);
  // Get environment variables of the requested dotnet process
  rpc GetProcessEnvironment (ProcessEnvironmentRequest) returns (ProcessEnvironmentResponse);
}

message ProcessListRequest {
}

message ProcessListResponse {
  repeated ProcessInfo processes = 1;
}

message ProcessInfo {
  int32 process_id = 1;
  string process_name = 2;
}

message ProcessDetailsRequest {
  int32 process_id = 1;
}

message ProcessDetailsResponse {
  optional ProcessDetails details = 1;
}

message ProcessDetails {
  int32 process_id = 1;
  optional string filename = 2;
  optional string start_time = 3;
  optional string command_line = 4;
  optional string operating_system = 5;
  optional string process_architecture = 6;
}

message ProcessEnvironmentRequest {
  int32 process_id = 1;
}

message ProcessEnvironmentResponse {
  repeated ProcessEnvironment environment = 1;
}

message ProcessEnvironment {
  string key = 1;
  string value = 2;
}